--- a/src/backend/WebApi/Properties/launchSettings.json
+++ b/src/backend/WebApi/Properties/launchSettings.json
@@ -11,18 +11,8 @@
   "profiles": {
     "WebApi": {
       "commandName": "Project",
+      "commandLineArgs": "--urls https://localhost:7148;http://localhost:5114",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7148;http://localhost:5114",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
