--- a/src/backend/Worker/Worker.csproj
+++ b/src/backend/Worker/Worker.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-Worker-1AC40A38-A73C-4BD3-8C73-AE96517F82A2</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>dotnet-Worker-1AC40A38-A73C-4BD3-8C73-AE96517F82A2</UserSecretsId>
+		<Company>PJATK</Company>
+		<Authors>Sandro, Pawel, Marcel</Authors>
+		<Product>In good hands</Product>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Core\Core.csproj" />
+	</ItemGroup>
 </Project>
