--- a/src/backend/Core/Configuration/Local/config.json
+++ b/src/backend/Core/Configuration/Local/config.json
@@ -1,8 +1,8 @@
 ﻿{
   "authorization": {
-    "authority": "https://dev-ucrasdm13.us.auth0.com/",
-    "audience": "https://starter.com/",
-    "clientId": "YT06Xmz...........Up9nNkPKNG",
+    "authority": "https://ingoodhands.eu.auth0.com/",
+    "audience": "ingoodhands",
+    "clientId": "KvCQmpdmay63JC5N5ObiK4DuKzVBys7L",
     "scopes": "openid profile offline_access email api"
   },
   "connectionStrings": {
