--- a/src/backend/Core/Configuration/Prd/config.json
+++ b/src/backend/Core/Configuration/Prd/config.json
@@ -1,14 +1,14 @@
 ﻿{
   "authorization": {
-    "authority": "https://dev-ucasdm13.us.auth0.com/",
-    "audience": "https://starter.com/",
-    "clientId": "YT06XmzPs...............nNkPKNG",
+    "authority": "https://ingoodhands.eu.auth0.com/",
+    "audience": "ingoodhands",
+    "clientId": "KvCQmpdmay63JC5N5ObiK4DuKzVBys7L",
     "scopes": "openid profile offline_access email api"
   },
   "connectionStrings": {
-    "database": "User ID=AWS_POSTGRES_USER;Password=AWS_POSTGRES_PASS;Database=starter;Host=AWS_POSTGRES_HOST;Port=AWS_POSTGRES_PORT;Connection Lifetime=0;"
+    "database": "User ID=postgres;Password=ingoodhands;Database=in_good_hands;Host=localhost;Port=5432;Connection Lifetime=0;"
   },
   "urls": {
-    "frontend": "https://starter.asdas.pl/"
+    "frontend": "https://indagoodhandsdev.web.app/"
   }
 }
