--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "update-3rd-party": "npm update @angular/material-luxon-adapter angular-auth-oidc-client lodash luxon"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +16,14 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.0",
+    "@angular/material-luxon-adapter": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-auth-oidc-client": "^15.0.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,6 +33,8 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/lodash": "^4.14.189",
+    "@types/luxon": "^3.1.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
