--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "update-3rd-party": "npm update @angular/material-luxon-adapter angular-auth-oidc-client lodash luxon"
+    "update-3rd-party": "npm update primeng angular-auth-oidc-client lodash luxon"
   },
   "private": true,
   "dependencies": {
@@ -16,14 +16,13 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.0",
-    "@angular/material-luxon-adapter": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "angular-auth-oidc-client": "^15.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
+    "primeng": "^15.0.0-rc.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
