--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -28,9 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/app/shared/scss/theme.scss",
               "src/app/shared/scss/styles.scss",
-              "src/app/shared/scss/bootstrap-grid.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
