--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,9 @@
     "angular-auth-oidc-client": "^15.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.0-rc.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
