--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "src/app/shared/scss/styles.scss",
+              "/node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
