--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/app/shared/scss/styles.scss",
-              "/node_modules/primeflex/primeflex.css",
+              "src/app/styles.scss",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
