--- a/.github/workflows/build-deploy-firebase.yml
+++ b/.github/workflows/build-deploy-firebase.yml
@@ -1,9 +1,12 @@
 name: "Build deploy to Firebase"
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
+    paths:
+      - 'src/frontend/**'
   workflow_dispatch:
-
 
 permissions:
   contents: read
