--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,25 +1,23 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
 
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS publish
 
-WORKDIR /src
+WORKDIR /app
 
-COPY ["src/backend/WebApi/WebApi.csproj", "src/backend/WebApi/"]
+COPY ["src/backend/.", "."]
 
-RUN dotnet restore "src/backend/WebApi/WebApi.csproj"
+
+RUN dotnet restore
 
 COPY . .
 
-WORKDIR "/src/src/backend/WebApi"
-RUN dotnet build "WebApi.csproj" -c Release -o /app/build
+RUN dotnet publish "/app/WebApi/WebApi.csproj" -c Release -o /app/publish
 
-FROM build AS publish
-RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish
-
-FROM base AS final
+FROM  base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000
 ENTRYPOINT ["dotnet", "WebApi.dll"]
