--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -32,6 +32,7 @@
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="System.Linq" Version="4.3.0" />
+		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.23" />
 	</ItemGroup>
 
