Changed directory AuthModule to AuthService

--- a/src/backend/AuthServiceTests/AuthServiceTests.csproj
+++ b/src/backend/AuthServiceTests/AuthServiceTests.csproj
@@ -13,13 +13,13 @@
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
 		<PackageReference Include="coverlet.collector" Version="3.2.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AuthModule\AuthService.csproj" />
+		<ProjectReference Include="..\AuthService\AuthService.csproj" />
 		<ProjectReference Include="..\Tests.Core\TestsBase.csproj" />
 	</ItemGroup>
 
