--- a/src/backend/WebApi/WebApi.csproj
+++ b/src/backend/WebApi/WebApi.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AuthModule\AuthService.csproj" />
+		<ProjectReference Include="..\AuthService\AuthService.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 
