feat(infra): cicd fixes v2

--- a/.github/workflows/build-fe.yml
+++ b/.github/workflows/build-fe.yml
@@ -29,14 +29,14 @@ jobs:
           npm ci
 
           ng build --configuration=production
-        working-directory: ./src/frontend
+        working-directory: src/frontend
 
       - name: Compress fe build files
-        run: tar -cvf fe_artifact.tar ./build
-        working-directory: ./src/frontend
+        run: tar -cvf fe_artifact.tar ./dist
+        working-directory: src/frontend
 
       - name: Upload fe artifact
         uses: actions/upload-artifact@v3
         with:
           name: fe-artifact
-          path: ./src/frontend/fe_artifact.tar
+          path: src/frontend/fe_artifact.tar
