feat(infra): cicd fixes v2

--- a/.github/workflows/build-fe.yml
+++ b/.github/workflows/build-fe.yml
@@ -13,7 +13,7 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  build-fe:
     runs-on: ubuntu-latest
     env:
       SERVICE: ${{ inputs.service }}
