--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -9,7 +9,7 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  build-be:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
