--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           docker-compose -f docker-compose.ci.yml build
 
-      - name: Build, tag and push Docker image
+      - name: Exec into backend container and run tests
         run: |
-          ./infra/scripts/push_images.sh backend
+          docker exec -it ingoodhands-backend-1 dotnet test
+
+#      - name: Build, tag and push Docker image
+#        run: |
+#          ./infra/scripts/push_images.sh backend
