feat(infra): add tests in ci

--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run backend and postgres for testing
         run: |
-          docker-compose -f docker-compose.ci.yml build
+          docker-compose -f docker-compose.ci.yml up -d
 
       - name: Exec into backend container and run tests
         run: |
