--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Exec into backend container and run tests
         run: |
-          docker exec -it ingoodhands_backend_1 dotnet test
+          docker exec ingoodhands_backend_1 dotnet test
 
 #      - name: Build, tag and push Docker image
 #        run: |
