feat(infra): add tests in ci

--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
 
-#      - name: Make backend uses prd config
-#        run: |
-#          echo "$( jq '.name = "Prd"' src/backend/Core/Configuration/environment.json )" > src/backend/Core/Configuration/environment.json
+      - name: Make backend uses prd config
+        run: |
+          echo "$( jq '.name = "Ci"' src/backend/Core/Configuration/environment.json )" > src/backend/Core/Configuration/environment.json
 
       - name: Run backend and postgres for testing
         run: |
