feat(infra): add tests in ci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -19,6 +19,14 @@ services:
       - POSTGRES_DB=in_good_hands
     ports:
       - "5432:5432"
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+          cpus: 0.5
+        reservations:
+          memory: 128m
+          cpus: 0.25
 
 volumes:
   pgdata:
