--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -41,3 +41,9 @@ jobs:
           region: 'europe-west1'
           service: 'backend'
           image: 'europe-docker.pkg.dev/indagoodhandsdev/default-docker/backend'
+          env_vars: |
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_DATABASE=${{ secrets.DB_DATABASE }}
+            DB_PORT=5432
