feat(infra): fix frontend

--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -2,6 +2,8 @@ name: "Build and push backend Docker image"
 
 on:
   pull_request:
+    paths:
+      - 'src/backend/**'
   workflow_dispatch:
 
 permissions:
