--- a/.github/workflows/build-fe.yml
+++ b/.github/workflows/build-fe.yml
@@ -2,6 +2,8 @@ name: "Build and upload frontend artifact"
 
 on:
   pull_request:
+    paths:
+      - 'src/frontend/**'
   workflow_dispatch:
 
 permissions:
