feat(infra): add tests in ci

--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
 
-      - name: Build, tag and push Docker image
-        run: |
-          ./infra/scripts/push_images.sh backend
+#      - name: Build, tag and push Docker image
+#        run: |
+#          ./infra/scripts/push_images.sh backend
 
       - name: Run backend and postgres for testing
         run: |
