feat(infra): add tests in ci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -18,10 +18,10 @@ services:
       resources:
         limits:
           memory: 512m
-          cpus: 0.5
+          cpus: '0.5'
         reservations:
           memory: 128m
-          cpus: 0.25
+          cpus: '0.25'
 
   postgres:
     image: postgres:14
@@ -37,10 +37,10 @@ services:
       resources:
         limits:
           memory: 512m
-          cpus: 0.5
+          cpus: '0.5'
         reservations:
           memory: 128m
-          cpus: 0.25
+          cpus: '0.25'
 
 volumes:
   pgdata:
