--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  backend:
+  backend-test:
     image: backend
     platform: linux/amd64
     build:
@@ -14,6 +14,21 @@ services:
       - DB_PASSWORD=ingoodhands
       - DB_DATABASE=in_good_hands
       - DB_PORT=5432
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+          cpus: '0.5'
+        reservations:
+          memory: 128m
+          cpus: '0.25'
+
+  backend:
+    image: backend
+    platform: linux/amd64
+    build:
+      context: .
+      dockerfile: src/backend/Dockerfile
     deploy:
       resources:
         limits:
