--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend-test:
-    image: backend
+    image: backend-test
     platform: linux/amd64
     build:
       context: .
