--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,33 +2,13 @@ version: '3.8'
 
 services:
   backend-test:
-    image: backend-test
-    platform: linux/amd64
-    build:
-      context: .
-      dockerfile: src/backend/Dockerfile
-      target: test
+    image: europe-docker.pkg.dev/indagoodhandsdev/default-docker/backend-test:latest
     environment:
       - DB_HOST=ingoodhands_postgres_1
       - DB_USER=postgres
       - DB_PASSWORD=ingoodhands
       - DB_DATABASE=in_good_hands
       - DB_PORT=5432
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-          cpus: '0.5'
-        reservations:
-          memory: 128m
-          cpus: '0.25'
-
-  backend:
-    image: backend
-    platform: linux/amd64
-    build:
-      context: .
-      dockerfile: src/backend/Dockerfile
     deploy:
       resources:
         limits:
