feat(infra): add tests in ci

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -33,3 +33,4 @@ jobs:
           dotnet-sonarscanner begin /k:"PJATK-SPK_ingoodhands" /o:"pjatk-spk" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build
           dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        working-directory: src/backend
