--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -1,10 +1,7 @@
 name: "Build and push backend Docker image"
 
 on:
-  pull_request:
-    paths:
-      - 'src/backend/**'
-  workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: read
@@ -24,3 +21,7 @@ jobs:
       - name: Build, tag and push Docker image
         run: |
           ./infra/scripts/push_images.sh backend
+
+      - name: Build, tag and push Docker image
+        run: |
+          ./infra/scripts/push_images.sh backend-test
