--- a/.github/workflows/build-fe.yml
+++ b/.github/workflows/build-fe.yml
@@ -1,10 +1,7 @@
 name: "Build and upload frontend artifact"
 
 on:
-  pull_request:
-    paths:
-      - 'src/frontend/**'
-  workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: read
