--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,8 +1,8 @@
 name: SonarCloud
 on:
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
