feat(infra): add tests in ci

--- a/.github/workflows/build-be.yml
+++ b/.github/workflows/build-be.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
 
-      - name: Build, tag and push Docker image
+      - name: Build, tag and push backend Docker image
         run: |
           ./infra/scripts/push_images.sh backend
 
-      - name: Build, tag and push Docker image
+      - name: Build, tag and push int-tests Docker image
         run: |
           ./infra/scripts/push_images.sh backend-test
