feat(infra): add tests in ci

--- a/.github/workflows/test-int-be.yml
+++ b/.github/workflows/test-int-be.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run backend and postgres for testing
         run: |
-          docker-compose -f docker-compose.ci.yml up -d
+          docker-compose -f docker-compose.ci.yml up -d --build
 
       - name: Exec into backend container and run tests
         run: |
