feat(infra): add tests in ci

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend-test:
-    image: europe-docker.pkg.dev/indagoodhandsdev/default-docker/backend-test:latest
+    image: backend-test
     environment:
       - DB_HOST=ingoodhands_postgres_1
       - DB_USER=postgres
